--- a/NNCompression/mainwindow.ui
+++ b/NNCompression/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>NNCompression</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -45,6 +45,13 @@
       <property name="verticalSpacing">
        <number>6</number>
       </property>
+      <item row="3" column="3">
+       <widget class="QLabel" name="training_size">
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="2">
        <widget class="QLabel" name="label_2">
         <property name="text">
@@ -65,13 +72,13 @@
          <bool>false</bool>
         </property>
         <property name="minimum">
-         <number>4</number>
+         <number>2</number>
         </property>
         <property name="maximum">
          <number>800</number>
         </property>
         <property name="value">
-         <number>8</number>
+         <number>6</number>
         </property>
        </widget>
       </item>
@@ -91,31 +98,17 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="2" column="1">
        <widget class="QLabel" name="isize">
         <property name="text">
          <string>ISize</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
+      <item row="2" column="2">
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Compressed Size :</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Input Image Size :</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="3">
-       <widget class="QLabel" name="osize">
-        <property name="text">
-         <string>OSize</string>
         </property>
        </widget>
       </item>
@@ -129,13 +122,94 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="4">
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Input Image Size :</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="4">
        <widget class="QPushButton" name="pushButton">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Compress</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QLabel" name="osize">
+        <property name="text">
+         <string>OSize</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="loop">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="minimum">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <number>20</number>
+        </property>
+        <property name="value">
+         <number>2</number>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Training set size</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Number of loop</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>Step (h)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>Compression</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QDoubleSpinBox" name="step">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="maximum">
+         <double>500.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
+        <property name="value">
+         <double>1.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QLabel" name="ratio">
+        <property name="text">
+         <string>Ratio</string>
         </property>
        </widget>
       </item>
@@ -157,6 +231,7 @@
      <string>Files</string>
     </property>
     <addaction name="actionLoad_a_picture"/>
+    <addaction name="actionSave_output_picture"/>
    </widget>
    <addaction name="menuNeural_Network_Compression"/>
   </widget>
@@ -172,6 +247,14 @@
   <action name="actionLoad_a_picture">
    <property name="text">
     <string>Load a picture...</string>
+   </property>
+  </action>
+  <action name="actionSave_output_picture">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Save output picture</string>
    </property>
   </action>
  </widget>
